<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/logo_icon"
            android:elevation="2dp"
            android:src="@drawable/logo_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/bg_view"
            android:layout_width="0dp"
            android:layout_height="448dp"
            android:background="@drawable/bg_primary500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_illustration"
            android:elevation="2dp"
            android:src="@drawable/illustration_welcome"
            app:layout_constraintBottom_toBottomOf="@+id/bg_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_welcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="3sp"
            android:text="@string/welcoming"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_view" />

        <TextView
            android:id="@+id/tv_identification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="2sp"
            android:text="@string/text_identification"
            android:textSize="14sp"
            android:textColor="@color/base500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcoming" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@drawable/button_state_colors"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:lineSpacingExtra="2sp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_identification" />

        <Button
            android:id="@+id/button_register"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:lineSpacingExtra="2sp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/primary800"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="@color/secondary"
            app:strokeColor="@color/primary800"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>